--- a/app/code/MW/FreeGift/view/frontend/web/css/skin.css
+++ b/app/code/MW/FreeGift/view/frontend/web/css/skin.css
@@ -219,7 +219,7 @@
 .product-item-inner .product-item-actions{clear: both;}
 .freegift_catalog_container .product-image{float: left; height: auto !important; width: auto !important; margin:5px 5px 5px 0px;;}
 .freegift_catalog_container .product-image img{border: 1px solid #dfdfdf;}
-#freegift li,.freegift li{position: relative; float: left; /*margin: 0px;*/ list-style: none; margin: 0; text-align: center;}
+#freegift li,.freegift li{position: relative; float: left; list-style: none; margin: 0 0 0 35px ; text-align: center;}
 .mw-fg-item{min-width: 150px; display: none; position: absolute; padding: 10px; border: 1px solid #c5c4c4; background-color: #fff; z-index: 999; top: 47px; left: 0px; -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px; box-shadow: 1px 1px 3px 1px #c5c4c4; color: #2f2f2f; text-align: left;}
 .mw-fg-item p{margin-bottom: 5px;}
 .mw-fg-item p.mw-fg-item-name a{color: #2f2f2f; text-decoration: none; font-weight: bold;}
@@ -334,7 +334,8 @@ background-color: #F6F6F6;
 }
 #freegift .product-image{
 	float: left;
-    width: 100%
+    width: 100%;
+    border: solid #eff5ea 3px;
 }
 /*#freegift .product-image img{border: 1px solid #e9e8e8;}*/
 
