--- a/app/code/MW/FreeGift/view/frontend/layout/checkout_cart_index.xml
+++ b/app/code/MW/FreeGift/view/frontend/layout/checkout_cart_index.xml
@@ -36,8 +36,8 @@
         </referenceBlock>
 
         <referenceContainer name="checkout.cart.form.before" ifconfig="mw_freegift/group_general/active">
-            <!--<block class="MW\FreeGift\Block\Hidden\Inject\Checkout\Cart\Init" name="cart.freegift.init" as="cart_freegift_init" template="MW_FreeGift::hidden/inject/checkout/cart/init.phtml" cacheable="false" />-->
-            <!--<block class="MW\FreeGift\Block\Hidden\Inject\Template" template="MW_FreeGift::hidden/inject/template.phtml" cacheable="false" />-->
+            <block class="MW\FreeGift\Block\Hidden\Inject\Checkout\Cart\Init" name="cart.freegift.init" as="cart_freegift_init" template="MW_FreeGift::hidden/inject/checkout/cart/init.phtml" cacheable="false" />
+            <block class="MW\FreeGift\Block\Hidden\Inject\Template" template="MW_FreeGift::hidden/inject/template.phtml" cacheable="false" />
             <!--<block class="MW\FreeGift\Block\Product" name="cart.freegift" as="freegiftbox" cacheable="false" />-->
 
             <!--<block class="MW\FreeGift\Block\Category\Freeproduct" name="freegift-slider" template="MW_FreeGift::checkout/cart/free_gift.phtml" before="checkout.cart"/>-->
