--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/free_gift.phtml
@@ -9,11 +9,7 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
     ?>
     <style>
         .disableGift{
-            -webkit-filter: grayscale(100%);
-            -moz-filter: blur(10px);
-            -o-filter: blur(10px);
-            -ms-filter: blur(10px);
-            filter: grayscale(100%);
+            opacity: 0.2;
         }
     </style>
     <div id="mw-fg-slider-cart">
@@ -29,6 +25,67 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                 <?php foreach($ProductGiftData as $giftData):
 
                     $product = $blockFreeGift->getProductGiftData($giftData['product_gift_id']);
+                    if(($product->getTypeId() != "simple") && ($product->getTypeId() == "configurable")){ ?>
+                        <?php
+                        $r_id = $giftData['rule_id'];
+                        $paramRule = '?freegift=1'.'&rule_id='. $r_id.'&apllied_rule='.$r_id.'&qty='.$giftData['qty'].'&options=cart';
+                        $urlAddToCart = $product->getProductUrl().$paramRule;
+                        //\Zend_Debug::dump($giftData); die; ?>
+                        <li class="mw-fg-items">
+                            <a id="stay-target-<?php echo $giftData['freegift_parent_key'].'_'.$giftData['product_gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image">
+                                <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
+                            </a>
+                            <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
+                            <div id="stay-content-<?php echo $giftData['freegift_parent_key'].'_'.$giftData['product_gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                                <div class="mw-fg-item-options">
+                                    <div class="mw-fg-item-option-title">
+                                        <?php echo $blockFreeGift->escapeHtml($giftData['rule_name']); ?>
+                                    </div>
+                                    <div class="mw-fg-item-option-ct">
+                                        <p class="mw-fg-item-name">
+                                            <a href="<?php echo $product->getProductUrl() ?>" title="<?php echo $product->getName() ?>"><?php echo $product->getName() ?></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-shop">
+                                <div class="f-fix">
+                                    <div class="old-price">
+                                        <?php echo '<span class="price">' . $product->getPrice() . '</span>'; ?>
+                                    </div>
+                                    <p>
+                                    <div class="mw-hidden-product" data-product-id="<?php echo $product->getId()?>"></div>
+                                    <div class="mw-hidden-product-image" data-product-image="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(265, 265)->getUrl()?>"></div>
+                                    <div class="mw-hidden-product-has-options" data-has-options="<?php echo ($product->getOptions() ? "1" : "0")?>"></div>
+                                    <div class="mw-hidden-product-type" data-product-type-id="<?php echo $product->getTypeId()?>"></div>
+                                    <?php
+                                    $addToCartUrl =  $blockFreeGift->getAddToCartUrl($product);
+                                        ?>
+                                        <?php $free_sales_key = $giftData['freegift_parent_key']; ?>
+                                        <input type="hidden" name="free_sales_key" value="<?php echo $free_sales_key; ?>">
+                                        <input type="hidden" name="rule_name" value="<?php echo $giftData['rule_name']; ?>">
+                                        <input type="hidden" name="rule_id" value="<?php echo $giftData['rule_id']; ?>">
+                                        <input type="hidden" name="gift_from_slider" value="1">
+
+                                        <button id="btn1"
+                                                data-applied-rule="<?php echo $giftData['rule_id'] ?>"
+                                                data-applied-rule-name="<?php echo $giftData['rule_name'] ?>"
+                                                data-free-parent-key="<?php echo $giftData['freegift_parent_key']; ?>"
+                                                data-rule-gift-from-slider="<?php echo "1" ?>"
+                                                data-ffg-type="catalog" data-type-id="<?php echo $product->getTypeId()?>"
+                                                href="<?php echo $urlAddToCart?>"
+                                                data-id="447" type="button" title="Add to Cart"
+                                                class="button btn-cart mw_rule1"
+                                                data-url="<?php echo $urlAddToCart?>"
+                                                data-qty="<?php echo $giftData['qty']?>">
+                                            <span><span>Add to Cart</span></span>
+                                        </button>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+
+                    <?php }else{
                     if($product->isSaleable()) :
                         ?>
 
@@ -79,12 +136,26 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                 </div>
                             </div>
                         </li>
-                    <?php endif; ?>
+                    <?php endif; } ?>
                 <?php endforeach; ?>
 
                 <?php foreach($ProductGiftSalesRuleData as $giftData):
                     $product = $blockFreeGift->getProductGiftData($giftData['rule_gift_ids']);
-                    if($product->isSaleable()) : ?>
+
+
+//                    $product->getProductUrl()
+                    $r_id = $giftData['rule_id'];
+                    $paramRule = '?freegift=1'.'&rule_id='. $r_id.'&apllied_rule='.$r_id.'&options=cart';
+                    $urlAddToCart = $product->getProductUrl().$paramRule;
+//                    \Zend_Debug::dump($product->getProductUrl().$arr); die;
+//                        $couponC = $couponCode[$rule->getId()];
+//                        $urlProduct = $product -> getProductUrl() . "?freegift=1&freegift_with_code=1&freegift_coupon_code=$couponC&rule_id=$r_id";
+//                        $attr_data = "data-freegift-code=".$couponC." data-rule-id='".$r_id."' data-ffg-type='coupon'";
+
+                    $mw_class_rule = 'mw_rule' . $r_id;
+
+
+                    if(($product->getTypeId() != "simple") && ($product->getTypeId() == "configurable")){ ?>
                         <li class="mw-fg-items">
                             <a id="stay-target-<?php echo $giftData['gift_id'].'_'.$giftData['gift_id'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image <?php if($giftData['is_able'] == 0) echo "disableGift" ?>">
                                 <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
@@ -115,25 +186,83 @@ if(count($ProductGiftData) > 0 || count($ProductGiftSalesRuleData) > 0):
                                     <?php
                                     $addToCartUrl =  $blockFreeGift->getAddToCartUrl($product);
                                     if($giftData['is_able'] == 1){
-                                    ?>
-                                    <form data-role="tocart-form" data-product-sku="<?=  /* @NoEscape */ $product->getSku() ?>" action="<?php echo $addToCartUrl ?>" method="post">
-                                        <input type="hidden" name="free_sales_key" value="<?php echo $giftData['rule_id'].'_'.$giftData['gift_id'].'_'.$giftData['number_of_free_gift']; ?>">
-                                        <input type="hidden" name="rule_name" value="<?php echo $giftData['rule_name']; ?>">
-                                        <input type="hidden" name="rule_id" value="<?php echo $giftData['rule_id']; ?>">
-                                        <input type="hidden" name="sales_gift_from_slider" value="1">
-                                        <?= $block->getBlockHtml('formkey') ?>
-                                        <button type="submit"
-                                                title="<?= $block->escapeHtml(__('Add to Cart')) ?>"
-                                                class="action tocart primary">
-                                            <span><?= /* @escapeNotVerified */ __('Add to Cart') ?></span>
-                                        </button>
-                                    </form>
+                                        ?>
+                                    <input type="hidden" name="free_sales_key" value="<?php echo $giftData['rule_id'].'_'.$giftData['gift_id'].'_'.$giftData['number_of_free_gift']; ?>">
+                                    <input type="hidden" name="rule_name" value="<?php echo $giftData['rule_name']; ?>">
+                                    <input type="hidden" name="rule_id" value="<?php echo $giftData['rule_id']; ?>">
+                                    <input type="hidden" name="sales_gift_from_slider" value="1">
+                                    <?php $free_sales_key = $giftData['rule_id'].'_'.$giftData['gift_id'].'_'.$giftData['number_of_free_gift']; ?>
+                                    <button id="btn1"
+                                            data-applied-rule="<?php echo $giftData['rule_id'] ?>"
+                                            data-applied-rule-name="<?php echo $giftData['rule_name'] ?>"
+                                            data-free-sales-key="<?php echo $giftData['rule_id'].'_'.$giftData['gift_id'].'_'.$giftData['number_of_free_gift']; ?>"
+                                            data-sales-gift-from-slider="<?php echo "1" ?>"
+                                            data-ffg-type="sale" data-type-id="<?php echo $product->getTypeId()?>"
+                                            href="<?php echo $urlAddToCart?>"
+                                            data-id="447" type="button" title="Add to Cart"
+                                            class="button btn-cart mw_rule1"
+                                            data-url="<?php echo $urlAddToCart?>">
+                                        <span><span>Add to Cart</span></span>
+                                    </button>
                                     <?php } ?>
                                     </p>
                                 </div>
                             </div>
                         </li>
-                    <?php endif; ?>
+
+                    <?php }else{
+                        if($product->isSaleable()) : ?>
+                            <li class="mw-fg-items">
+                                <a id="stay-target-<?php echo $giftData['gift_id'].'_'.$giftData['gift_id'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" href="<?php echo $product->getProductUrl()?>" title="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" class="product-image <?php if($giftData['is_able'] == 0) echo "disableGift" ?>">
+                                    <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(140,135)->getUrl(); ?>" width="140" height="135" alt="<?php echo $blockFreeGift->escapeHtml($product->getName()); ?>" />
+                                </a>
+                                <span style="display: none" class="product-name"><a href="javascript:;"><?php echo $product->getName(); ?></a></span>
+                                <div id="stay-content-<?php echo $giftData['gift_id'].'_'.$giftData['gift_id'].'_sr'; ?>" href="<?php echo $product->getProductUrl(); ?>" class="mw-fg-item">
+                                    <div class="mw-fg-item-options">
+                                        <div class="mw-fg-item-option-title">
+                                            <?php echo $blockFreeGift->escapeHtml($giftData['rule_name']); ?>
+                                        </div>
+                                        <div class="mw-fg-item-option-ct">
+                                            <p class="mw-fg-item-name">
+                                                <a href="<?php echo $product->getProductUrl() ?>" title="<?php echo $product->getName() ?>"><?php echo $product->getName() ?></a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="product-shop">
+                                    <div class="f-fix">
+                                        <div class="old-price">
+                                            <?php echo '<span class="price">' . $product->getPrice() . '</span>'; ?>
+                                        </div>
+                                        <p>
+                                        <div class="mw-hidden-product" data-product-id="<?php echo $product->getId()?>"></div>
+                                        <div class="mw-hidden-product-image" data-product-image="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(265, 265)->getUrl()?>"></div>
+                                        <div class="mw-hidden-product-has-options" data-has-options="<?php echo ($product->getOptions() ? "1" : "0")?>"></div>
+                                        <div class="mw-hidden-product-type" data-product-type-id="<?php echo $product->getTypeId()?>"></div>
+                                        <?php
+                                        $addToCartUrl =  $blockFreeGift->getAddToCartUrl($product);
+                                        if($giftData['is_able'] == 1){
+                                            ?>
+                                            <form data-role="tocart-form" data-product-sku="<?=  /* @NoEscape */ $product->getSku() ?>" action="<?php echo $addToCartUrl ?>" method="post">
+                                                <input type="hidden" name="free_sales_key" value="<?php echo $giftData['rule_id'].'_'.$giftData['gift_id'].'_'.$giftData['number_of_free_gift']; ?>">
+                                                <input type="hidden" name="rule_name" value="<?php echo $giftData['rule_name']; ?>">
+                                                <input type="hidden" name="rule_id" value="<?php echo $giftData['rule_id']; ?>">
+                                                <input type="hidden" name="sales_gift_from_slider" value="1">
+                                                <?= $block->getBlockHtml('formkey') ?>
+                                                <button type="submit"
+                                                        title="<?= $block->escapeHtml(__('Add to Cart')) ?>"
+                                                        class="action tocart primary">
+                                                    <span><?= /* @escapeNotVerified */ __('Add to Cart') ?></span>
+                                                </button>
+                                            </form>
+                                        <?php } ?>
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                        <?php endif; ?>
+                    <?php } ?>
+
                 <?php endforeach; ?>
             </ul>
         </div>
