update generate coupon admin + config start date report

--- a/app/code/MW/FreeGift/view/adminhtml/templates/report/view.phtml
+++ b/app/code/MW/FreeGift/view/adminhtml/templates/report/view.phtml
@@ -30,7 +30,7 @@
 
                 yAxis: {
                     title: {
-                        text: 'Exchange rate'
+                        text: 'Value'
                     }
                 },
 
