--- a/app/code/MW/FreeGift/view/frontend/layout/checkout_cart_index.xml
+++ b/app/code/MW/FreeGift/view/frontend/layout/checkout_cart_index.xml
@@ -51,10 +51,11 @@
         </referenceContainer>
 
         <referenceContainer name="cart.summary">
-            <block class="MW\FreeGift\Block\Cart\Coupon" name="checkout.cart.coupon1" as="coupon1" after="checkout.cart.coupon" template="MW_FreeGift::cart/coupon.phtml"/>
+            <block class="MW\FreeGift\Block\Cart\Coupon" name="freegift.checkout.cart.coupon" as="freegift.checkout.cart.coupon" after="checkout.cart.coupon" template="MW_FreeGift::cart/coupon.phtml"/>
+            <block class="MW\FreeGift\Block\Cart\Social" name="freegift.checkout.cart.social" as="freegift.checkout.cart.social" before="-"  template="MW_FreeGift::cart/social.phtml"/>
         </referenceContainer>
 
-        <move element="checkout.cart.coupon1" destination="cart.discount" />
+        <move element="freegift.checkout.cart.coupon" destination="cart.discount" />
 
 
 
