--- a/app/code/MW/FreeGift/view/frontend/templates/cart/social.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/cart/social.phtml
@@ -65,22 +65,21 @@ if ($title_box != '' && $title_box != 'undefined') { } else {
                 <div class="fb-like" data-href="<?php echo $url_productid.'?time='.$time ?>" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
             <?php } ?>
             <?php if($temp_data['share_fb']){ ?>
-                <div class="share-fb">share fb</div>
+                <div class="share-fb"></div>
             <?php } ?>
         </div>
         <?php if($temp_data['twitter']){ ?>
             <div class="so-twitter so-common">
                 <div id="share-twitter"></div>
-
             </div>
         <?php } ?>
         <?php
         $box_des = $block->getStoreConfig('mw_freegift/group_social/description');
         if($box_des !='null' && $box_des != 'undefined'){ ?>
             <div class="so-description">
-                    <span>
-                        <?php echo $box_des; ?>
-                    </span>
+                <span>
+                    <?php echo $box_des; ?>
+                </span>
             </div>
         <?php } ?>
 
